@@ -4107,6 +4107,7 @@ GEN     lfunlambda(GEN ldata, GEN s, long bitprec);
 GEN     lfunlambda0(GEN ldata, GEN s, long der, long bitprec);
 GEN     lfunmisc_to_ldata(GEN ldata);
 GEN     lfunmisc_to_ldata_shallow(GEN ldata);
+GEN     lfunmisc_to_ldata_shallow_i(GEN ldata);
 long    lfunorderzero(GEN ldata, long m, long bitprec);
 GEN     lfunprod_get_fact(GEN tech);
 GEN     lfunrootno(GEN data, long bitprec);
