@@ -10,10 +10,13 @@
 [1, -3/64, 105/8192, -3465/524288, 675675/134217728, -43648605/8589934592, 7
 027425405/1099511627776, -677644592625/70368744177664, 609202488769875/36028
 797018963968, -78180986058800625/2305843009213693952]
+[1]
+0.086427836527544499548835474343456022551
+0.086427836527544499548835474343456022551
   ***   at top-level: gammamellininvasymp([])
   ***                 ^-----------------------
-  *** gammamellininvasymp: incorrect type in gammamellininvinit (t_VEC).
+  *** gammamellininvasymp: incorrect type in gammamellininvasymp (t_VEC).
   ***   at top-level: gammamellininvinit([])
   ***                 ^----------------------
   *** gammamellininvinit: incorrect type in gammamellininvinit (t_VEC).
-Total time spent: 4403
+Total time spent: 4159
